# wind-power-forecasting

./: .gitignore  README.md  pyproject.toml
saved_models/: lreg_model.pt  nn_model.pt  rf_model.pt
tests/: test_data.py
wind_power_forecasting/: data.py  main.py  results.ipynb  urls.py  utils.py
wind_power_forecasting/baseline/: __init__.py  model.py
wind_power_forecasting/logistic_regression/: model.py
wind_power_forecasting/models/: __init__.py  model.py
wind_power_forecasting/models/baseline/: __init__.py  model.py
wind_power_forecasting/models/logistic_regression/: __init__.py  model.py
wind_power_forecasting/models/neural_network/: __init__.py  model.py
wind_power_forecasting/models/random_forest/: __init__.py  model.py
wind_power_forecasting/neural_network/: __init__.py  model.py
wind_power_forecasting/saved_models/: nn_model.pt
wind_power_forecasting/utils/: progressbar.py
