[tool.poetry]
name = "wind-power-forecasting"
version = "0.1.0"
description = "Data Mining Project for the WPF using 3 different models"
authors = ["Christoforou Anthony <Anthony.Christoforou@etu.unige.ch>", "Arm Ethan <Ethan.Arm@etu.unige.ch>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "wind_power_forecasting"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
torch = "^2.0.0"
pandas = "^2.0.1"
progressbar = "^2.5"
pytest = "^7.3.1"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"
tqdm = "^4.65.0"
joblib = "^1.2.0"
scikit-learn = "^1.2.2"
pyqt5 = "^5.15.9"
setuptools = "^68.0.0"
optuna = "^3.2.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
forecast = "wind_power_forecasting.main:main"